--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Body Mass Index | Mateus A. Carvalho</title>
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="icon" href="/assets/img/dumbbell-solid.svg" type="image/x-icon">
+  <link rel="icon" href="./assets/img/dumbbell-solid.svg" type="image/x-icon">
 </head>
 
 <body>
